# Yondero

./: .gitignore  Dockerfile  README.md  api.yml  concept.md  docker-compose.yml  pyproject.toml  run.py  schema.sql
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
api/: __init__.py  postgres.py  pyproject.toml  style.py
api/api/: api.py  bibtex.py  db,py  postgres.py  style.py
backend/: Dockerfile  api.py  entrypoint.sh  fileio.py  postgres.py  pyproject.toml  req.py  schema.sql  style.py
backend/modules/: attachment.py  database.py  db.py  entries.py  models.py
backend/test/: test_api.py
config/: gunicorn.conf.py
frontend/: web.py
frontend/templates/frontend/: base.html  dashboard.html  document.html  document_file.html  documents_all.html  error.html  index.html  items.html  login.html  record.html  register.html  search.html
old/: .gitignore  Dockerfile  README.md  api.yml  docker-compose.yml  pyproject.toml  run.py
old/backend/: api.py  fileio.py  postgres.py  reqparser.py  style.py
old/config/: gunicorn.conf.py
old/frontend/: web.py
old/frontend/templates/frontend/: base.html  dashboard.html  error.html  index.html  items.html  login.html  register.html  search.html  success.html  upload.html
