[tool.poetry]
name = "yondero"
version = "0.1.0"
description = ""
authors = ["nesosuke <neso@neso.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bibtexparser = "^1.4.0"
fastapi = "^0.88.0"
werkzeug = "^2.2.2"
uvicorn = "^0.20.0"
jsonify = "^0.5"
gunicorn = "^20.1.0"
datamodel-code-generator = "^0.14.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
