[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["nesosuke <neso@neso.tech>"]

[tool.poetry.dependencies]
python = "^3.8"
bibtexparser = "^1.2.0"
Flask-Login = "^0.6.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
