[tool.poetry]
name = "backend"
version = "0.0.1"
description = "Yondero backend"
authors = ["nesosuke <neso@neso.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
pymongo = "^4.2.0"
gunicorn = "^20.1.0"
uvicorn = "^0.18.3"


[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"
flake8 = "^5.0.4"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
